--- a/scss/components/_icons.scss
+++ b/scss/components/_icons.scss
@@ -7,7 +7,7 @@
 .icn-t1 {
 	color: $icn-t1-txt-color;
 	font-size: 0.75rem;
-	padding: 20px 10px;
+	padding: 23px 10px;
 	position: relative;
 	&:hover {
 		color: rgba(0,0,0,.7);
